@@ -1,3 +1,7 @@
+2003-09-21	Mike Bourgeous		<nitrogen@slimetech.com>
+
+	* Updated README files.
+
 2003-09-20	Mike Bourgeous		<nitrogen@slimetech.com>
 
 	* Better flow in tl880_isr_video_sync_dvd in tl880dpc.c.
